--- a/css/style.css
+++ b/css/style.css
@@ -121,7 +121,7 @@ section:nth-of-type(even) {
 .hero-bg {
     position: absolute;
     top: 0; left: 0; width: 100%; height: 100%;
-    background: url('../Img/backgraund_inicio.png') no-repeat center center;
+    background: url('../img/backgraund_inicio.png') no-repeat center center;
     background-size: cover;
     filter: blur(6px) brightness(0.5) hue-rotate(10deg); 
     transform: scale(1.05);
@@ -230,7 +230,18 @@ section:nth-of-type(even) {
 }
 
 /* --- FORMULARIO --- */
-.contact-form input, 
+
+.contact-top{
+  display:flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 12px;
+  flex-wrap: wrap;
+  margin-bottom: 16px;
+}
+
+.contact-form input,
+
 .contact-form textarea {
     background: rgba(0,0,0,0.2);
     border: 1px solid #333;
